--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,8 +1,5 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <div class="container d-flex align-items-center">
-    <button mat-icon-button>
-      <mat-icon>menu</mat-icon>
-    </button>
     <span>Demo NgRx</span>
     <span class="spacer"></span>
     <button
