--- a/src/app/todo/components/todo-index/todo-index.component.html
+++ b/src/app/todo/components/todo-index/todo-index.component.html
@@ -1,1 +1,6 @@
-<p>todo-index works!</p>
+<div class="todo-index-page container">
+  <h1>To Do</h1>
+  <mat-selection-list>
+    <mat-list-option>Item list number one</mat-list-option>
+  </mat-selection-list>
+</div>
