--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-top-bar></app-top-bar>
-<router-outlet></router-outlet>
+<!-- <div class="app-layout"> -->
+<div class="app-layout__header">
+  <app-top-bar></app-top-bar>
+</div>
+<div class="app-layout__content">
+  <router-outlet></router-outlet>
+</div>
+<!-- </div> -->
