--- a/src/app/todo/todo-index/todo-index.component.css
+++ b/src/app/todo/todo-index/todo-index.component.css
@@ -1,15 +1,38 @@
-.todo-index-page {
-  margin-top: 50px;
+:host {
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-.todo-index-page__title {
-  text-align: center;
+.todo-index-page {
+  flex: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .todo-index-page__todo-panel {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 400px;
+}
+
+.todo-index-page__title {
+  order: 1;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.todo-index-page__list {
+  order: 2;
+  flex: 1;
+}
+
+.todo-index-page__input {
+  order: 3;
+}
+
+.todo-index-page__input mat-form-field {
+  width: 100%;
 }
