--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<!-- <div class="app-layout"> -->
-<div class="app-layout__header">
+<div class="header">
   <app-top-bar></app-top-bar>
 </div>
-<div class="app-layout__content">
+<div class="content">
   <router-outlet></router-outlet>
 </div>
-<!-- </div> -->
