--- a/src/app/todo/todo-index/todo-index.component.scss
+++ b/src/app/todo/todo-index/todo-index.component.scss
@@ -7,32 +7,28 @@
   flex: 1;
   display: flex;
   justify-content: center;
-}
 
-.todo-index-page__todo-panel {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 400px;
-}
-
-.todo-index-page__title {
-  order: 1;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.todo-index-page__list {
-  order: 2;
-  flex: 1;
-}
-
-.todo-index-page__input {
-  order: 3;
-}
-
-.todo-index-page__input mat-form-field {
-  width: 100%;
+  &__todo-panel {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+  }
+  &__title {
+    order: 1;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  &__list {
+    order: 2;
+    flex: 1;
+  }
+  &__input {
+    order: 3;
+    mat-form-field {
+      width: 100%;
+    }
+  }
 }
