--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class="header">
-  <app-top-bar></app-top-bar>
-</div>
-<div class="content">
-  <router-outlet></router-outlet>
+<div class="main-app dark-mode">
+  <div class="header">
+    <app-top-bar></app-top-bar>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
