--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,12 @@
   flex-direction: column;
 }
 
+.main-app {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   order: 1;
 }
