toggle theme commited.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-app dark-mode">
+<div class="main-app mat-app-background" [ngClass]="getThemeClass()">
   <div class="header">
     <app-top-bar></app-top-bar>
   </div>
