--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -8,10 +8,10 @@
       aria-label="Example icon-button with heart icon"
       (click)="toggleThemeClickHandler()"
     >
-      @if (isLightTheme) {
-      <mat-icon>light_mode</mat-icon>
-      } @else if (isDarkTheme) {
+      @if (isDarkMode) {
       <mat-icon>dark_mode</mat-icon>
+      } @else {
+      <mat-icon>light_mode</mat-icon>
       }
     </button>
   </div>
