--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -8,8 +8,6 @@ $dark-theme: mat.define-dark-theme(
       primary: mat.define-palette(mat.$deep-purple-palette),
       accent: mat.define-palette(mat.$amber-palette),
     ),
-    typography: mat.define-typography-config(),
-    density: 0,
   )
 );
 
@@ -22,18 +20,12 @@ $light-theme: mat.define-light-theme(
   )
 );
 
-// @include mat.core-color($light-theme);
-// @include mat.all-component-themes($light-theme);
+.light-theme {
+  @include mat.core-color($light-theme);
+  @include mat.all-component-themes($light-theme);
+}
 
-// .dark-mode {
-@include mat.core-color($dark-theme);
-@include mat.all-component-themes($dark-theme);
-// }
-// @media (prefers-color-scheme: light) {
-
-// }
-
-// @media (prefers-color-scheme: dark) {
-//   @include mat.core-color($dark-theme);
-//   @include mat.all-component-themes($dark-theme);
-// }
+.dark-theme {
+  @include mat.core-color($dark-theme);
+  @include mat.all-component-themes($dark-theme);
+}
