--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,8 @@
-<h1>Page not found</h1>
+<div class="page-not-found">
+  <div class="inner-content">
+    <h1>Page not found</h1>
+    <button mat-raised-button color="primary" [routerLink]="['/']">
+      Back to index
+    </button>
+  </div>
+</div>
