--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,10 +1,12 @@
 <div class="container">
   <h1 class="text-center">Demos</h1>
   <div class="list">
-    <mat-nav-list>
-      <mat-list-item>
-        <a matListItemTitle href="/todo">Todo</a>
-      </mat-list-item>
-    </mat-nav-list>
+    <mat-action-list>
+      @for (link of links; track $index) {
+      <button mat-list-item (click)="redirectTo(link)">
+        {{ link.name }}
+      </button>
+      }
+    </mat-action-list>
   </div>
 </div>
