--- a/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -1,12 +1,51 @@
-<div class="drag-and-drop">
-  <div class="drag-and-drop__container">
-    <!-- Left panel -->
-    <app-drag-and-drop-panel></app-drag-and-drop-panel>
-
-    <!-- Actions -->
-    <app-drag-and-drop-actions></app-drag-and-drop-actions>
-
-    <!-- Right panel -->
-    <app-drag-and-drop-panel></app-drag-and-drop-panel>
+<!-- <div [id]="id" class="drag-and-drop"> -->
+<div class="example-container">
+  <h2>To do</h2>
+  <div
+    cdkDropList
+    #unassignedList="cdkDropList"
+    [cdkDropListData]="unassignedItems"
+    [cdkDropListConnectedTo]="[assignedList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    @for (item of unassignedItems; track item.id) {
+    <div class="example-box" cdkDrag>{{ item.description }}</div>
+    }
   </div>
 </div>
+
+<div class="example-container">
+  <h2>Done</h2>
+
+  <div
+    cdkDropList
+    #assignedList="cdkDropList"
+    [cdkDropListData]="assignedItems"
+    [cdkDropListConnectedTo]="[unassignedList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    @for (item of assignedItems; track item.id) {
+    <div class="example-box" cdkDrag>{{ item.description }}</div>
+    }
+  </div>
+</div>
+<!-- <div class="drag-and-drop__container">
+    <app-drag-and-drop-panel
+      #unassignedPanel
+      [items]="items"
+      [connectedTo]="assignedPanel"
+      (emitDrop)="leftPanelDropHandler($event)"
+    ></app-drag-and-drop-panel>
+
+    <app-drag-and-drop-actions></app-drag-and-drop-actions>
+
+    <app-drag-and-drop-panel
+      #assignedPanel
+      [items]="assignedItems"
+      [connectedTo]="unassignedPanel"
+      (emitDrop)="rightPanelDropHandler($event)"
+    ></app-drag-and-drop-panel>
+  </div> -->
+<!-- </div> -->
