--- a/src/styles/_drag-and-drop.scss
+++ b/src/styles/_drag-and-drop.scss
@@ -12,6 +12,8 @@ $dad-panel-background-color: #ffffff;
 
   // Container
   &__container {
+    width: 940px;
+    max-width: 100%;
     min-height: 400px;
 
     display: grid;
@@ -46,6 +48,8 @@ $dad-panel-background-color: #ffffff;
   }
 
   &__panel-list {
+    height: 100%;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
   }
@@ -56,4 +60,28 @@ $dad-panel-background-color: #ffffff;
     align-items: center;
     margin-left: $dad-vertical-spacer;
   }
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-and-drop__panel-list-item:last-child {
+  border: none;
+}
+
+.drag-and-drop__panel-list.cdk-drop-list-dragging
+  .drag-and-drop__panel-list-item:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
