--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -1,10 +1,10 @@
 <div class="drag-and-drop__panel">
+  <h2>{{ config.title }}</h2>
   <div
+    [id]="'drag-and-drop-panel-' + config.side"
     class="drag-and-drop__panel-list"
     cdkDropList
-    #panel="cdkDropList"
     [cdkDropListData]="items"
-    [cdkDropListConnectedTo]="[panelConnection]"
     (cdkDropListDropped)="onDrop($event)"
   >
     @for (item of items; track $index) {
