improves dra-preview item.

--- a/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
+++ b/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <h1 class="text-center">Drag & Drop</h1>
   <div>
-    <app-drag-and-drop [config]="dragAndDropConfig"></app-drag-and-drop>
+    <app-drag-and-drop
+      [config]="dragAndDropConfig"
+      [unassignedItems]="unassignedItems"
+      [assignedItems]="assignedItems"
+    ></app-drag-and-drop>
   </div>
 </div>
