--- a/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -1,42 +1,8 @@
 <div [id]="id" class="drag-and-drop">
-  <!-- <div class="drag-and-drop__container">
-    <div class="drag-and-drop__panel">
-      <div
-        cdkDropList
-        #unassignedList="cdkDropList"
-        [cdkDropListData]="unassignedItems"
-        [cdkDropListConnectedTo]="[assignedList]"
-        class="drag-and-drop__panel-list"
-        (cdkDropListDropped)="drop($event)"
-      >
-        @for (item of unassignedItems; track item.id) {
-        <div class="drag-and-drop__panel-list-item" cdkDrag>
-          {{ item.description }}
-        </div>
-        }
-      </div>
-    </div>
-    <app-drag-and-drop-actions></app-drag-and-drop-actions>
-    <div class="drag-and-drop__panel">
-      <div
-        cdkDropList
-        #assignedList="cdkDropList"
-        [cdkDropListData]="assignedItems"
-        [cdkDropListConnectedTo]="[unassignedList]"
-        class="drag-and-drop__panel-list"
-        (cdkDropListDropped)="drop($event)"
-      >
-        @for (item of assignedItems; track item.id) {
-        <div class="drag-and-drop__panel-list-item" cdkDrag>
-          {{ item.description }}
-        </div>
-        }
-      </div>
-    </div>
-  </div> -->
   <div class="drag-and-drop__container" cdkDropListGroup>
     <app-drag-and-drop-panel
       #unassignedPanel
+      side="left"
       [config]="config.left"
       [items]="unassignedItems"
       (drop)="onDropHandler($event)"
@@ -46,6 +12,7 @@
 
     <app-drag-and-drop-panel
       #assignedPanel
+      side="right"
       [config]="config.right"
       [items]="assignedItems"
       (drop)="onDropHandler($event)"
