--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -1,16 +1,21 @@
 <div class="drag-and-drop__panel">
   <h2>{{ config.title }}</h2>
-  <div
+  <mat-list
     [id]="'drag-and-drop-panel-' + config.side"
     class="drag-and-drop__panel-list"
+    role="list"
     cdkDropList
     [cdkDropListData]="items"
     (cdkDropListDropped)="onDrop($event)"
   >
     @for (item of items; track $index) {
-    <div cdkDrag class="drag-and-drop__panel-list-item">
+    <mat-list-item
+      role="listitem"
+      cdkDrag
+      class="drag-and-drop__panel-list-item"
+    >
       {{ item.description }}
-    </div>
+    </mat-list-item>
     }
-  </div>
+  </mat-list>
 </div>
