--- a/src/styles/_drag-and-drop.scss
+++ b/src/styles/_drag-and-drop.scss
@@ -2,9 +2,29 @@ $dad-vertical-spacer: 20px;
 $dad-gap: 10px;
 $dad-action-button-size: 24px;
 
+$dad-panel-width: 940px;
 $dad-panel-border: 1px solid #dbdbdb;
 $dad-panel-border-radius: 5px;
 $dad-panel-background-color: #ffffff;
+
+$dad-panel-list-height: 400px;
+$dad-panel-list-item-height: 42px;
+
+.cdk-drag-preview {
+  border: $dad-panel-border;
+  border-radius: $dad-panel-border-radius !important;
+  background-color: $dad-panel-background-color !important;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
 
 .drag-and-drop {
   margin-top: $dad-vertical-spacer;
@@ -12,9 +32,8 @@ $dad-panel-background-color: #ffffff;
 
   // Container
   &__container {
-    width: 940px;
+    width: $dad-panel-width;
     max-width: 100%;
-    min-height: 400px;
 
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -32,6 +51,7 @@ $dad-panel-background-color: #ffffff;
     display: flex;
     flex-direction: column;
     gap: $dad-gap;
+    max-height: 400px;
   }
 
   &__actions-list-item {
@@ -40,48 +60,32 @@ $dad-panel-background-color: #ffffff;
   }
 
   // Panel
-  &__panel {
-    height: 100%;
-    border-radius: $dad-panel-border-radius;
-    border: $dad-panel-border;
-    background-color: $dad-panel-background-color;
-  }
+  // &__panel { }
 
   &__panel-list {
-    height: 100%;
-    overflow: hidden;
+    $self: &;
+    height: $dad-panel-list-height;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
+    padding: 0 !important;
+    border-radius: $dad-panel-border-radius;
+    border: $dad-panel-border;
+
+    &.cdk-drop-list-dragging {
+      #{$self}-item:not(.cdk-drag-placeholder) {
+        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+      }
+    }
   }
 
   &__panel-list-item {
-    height: 25px;
+    outline: none;
+    cursor: pointer;
+    height: $dad-panel-list-item-height;
     display: flex;
     align-items: center;
-    margin-left: $dad-vertical-spacer;
+    border-bottom: $dad-panel-border;
+    background-color: $dad-panel-background-color;
   }
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.drag-and-drop__panel-list-item:last-child {
-  border: none;
-}
-
-.drag-and-drop__panel-list.cdk-drop-list-dragging
-  .drag-and-drop__panel-list-item:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
