--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
@@ -6,7 +6,7 @@
       matTooltip="Basic"
       aria-label="Example icon-button with a heart icon"
     >
-      <mat-icon>arrow_right</mat-icon>
+      <mat-icon>arrow_forward</mat-icon>
     </button>
     <button
       color="primary"
@@ -14,7 +14,7 @@
       matTooltip="Basic"
       aria-label="Example icon-button with a heart icon"
     >
-      <mat-icon>arrow_left</mat-icon>
+      <mat-icon>arrow_back</mat-icon>
     </button>
   </div>
 </div>
