--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -1,7 +1,7 @@
 <div class="drag-and-drop__panel">
   <h2>{{ config.title }}</h2>
-  <mat-list
-    [id]="'drag-and-drop-panel-' + config.side"
+  <div
+    [id]="'drag-and-drop-panel-' + side"
     class="drag-and-drop__panel-list"
     role="list"
     cdkDropList
@@ -9,13 +9,21 @@
     (cdkDropListDropped)="onDrop($event)"
   >
     @for (item of items; track $index) {
-    <mat-list-item
-      role="listitem"
-      cdkDrag
-      class="drag-and-drop__panel-list-item"
-    >
-      {{ item.description }}
-    </mat-list-item>
+    <div role="listitem" cdkDrag class="drag-and-drop__panel-list-item">
+      <mat-icon>drag_indicator</mat-icon>
+      <mat-checkbox *ngIf="config.isSelectable"></mat-checkbox>
+      <div class="drag-and-drop__item-label">
+        {{ item.description }}
+      </div>
+      <span
+        class="drag-and-drop__item-status"
+        [ngClass]="statusClass"
+        *ngIf="config.hasStatus"
+      ></span>
+      <button mat-icon-button color="primary" *ngIf="config.hasActionButton">
+        <mat-icon>{{ config.actionButtonIcon }}</mat-icon>
+      </button>
+    </div>
     }
-  </mat-list>
+  </div>
 </div>
