--- a/src/styles/_drag-and-drop.scss
+++ b/src/styles/_drag-and-drop.scss
@@ -1,4 +1,4 @@
-$dad-vertical-spacer: 20px;
+$dad-spacer: 18px;
 $dad-gap: 10px;
 $dad-action-button-size: 24px;
 
@@ -8,7 +8,11 @@ $dad-panel-border-radius: 5px;
 $dad-panel-background-color: #ffffff;
 
 $dad-panel-list-height: 400px;
-$dad-panel-list-item-height: 42px;
+$dad-panel-list-item-height: 56px;
+$dad-panel-list-item-status-size: 10px;
+$dad-panel-list-item-status-default: grey;
+$dad-panel-list-item-status-success: green;
+$dad-panel-list-item-status-error: red;
 
 .cdk-drag-preview {
   border: $dad-panel-border;
@@ -27,8 +31,8 @@ $dad-panel-list-item-height: 42px;
 }
 
 .drag-and-drop {
-  margin-top: $dad-vertical-spacer;
-  margin-bottom: $dad-vertical-spacer;
+  margin-top: $dad-spacer;
+  margin-bottom: $dad-spacer;
 
   // Container
   &__container {
@@ -38,6 +42,64 @@ $dad-panel-list-item-height: 42px;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     gap: $dad-gap;
+  }
+
+  // Panel
+  &__panel {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__panel-list {
+    $self: &;
+    padding: 0;
+    overflow-y: auto;
+    height: $dad-panel-list-height;
+    border-radius: $dad-panel-border-radius;
+    border: $dad-panel-border;
+
+    &.cdk-drop-list-dragging {
+      #{$self}-item:not(.cdk-drag-placeholder) {
+        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+      }
+    }
+  }
+
+  &__panel-list-item {
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: $dad-panel-list-item-height;
+    padding-left: $dad-spacer;
+    padding-right: $dad-spacer;
+    border-bottom: $dad-panel-border;
+    background-color: $dad-panel-background-color;
+  }
+
+  &__item-label {
+    flex: 1;
+  }
+
+  &__item-status {
+    display: block;
+    width: $dad-panel-list-item-status-size;
+    height: $dad-panel-list-item-status-size;
+    border-radius: 50%;
+    background-color: $dad-panel-list-item-status-default;
+
+    &:not(:last-child) {
+      margin-right: $dad-spacer;
+    }
+
+    &.success {
+      background-color: $dad-panel-list-item-status-success;
+    }
+
+    &.error {
+      background-color: $dad-panel-list-item-status-error;
+    }
   }
 
   // Actions
@@ -57,35 +119,5 @@ $dad-panel-list-item-height: 42px;
   &__actions-list-item {
     width: $dad-action-button-size;
     height: $dad-action-button-size;
-  }
-
-  // Panel
-  // &__panel { }
-
-  &__panel-list {
-    $self: &;
-    height: $dad-panel-list-height;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    padding: 0 !important;
-    border-radius: $dad-panel-border-radius;
-    border: $dad-panel-border;
-
-    &.cdk-drop-list-dragging {
-      #{$self}-item:not(.cdk-drag-placeholder) {
-        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-      }
-    }
-  }
-
-  &__panel-list-item {
-    outline: none;
-    cursor: pointer;
-    height: $dad-panel-list-item-height;
-    display: flex;
-    align-items: center;
-    border-bottom: $dad-panel-border;
-    background-color: $dad-panel-background-color;
   }
 }
