--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
+// Theme
 @import "themes";
-@import "layout";
 @import "typography";
+@import "scrollbar";
+
+// Layout
+@import "layout";
 
 // Components
 @import "drag-and-drop";
