Drag and drop base class.

--- a/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
+++ b/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
@@ -5,6 +5,8 @@
       [config]="dragAndDropConfig"
       [unassignedItems]="unassignedItems"
       [assignedItems]="assignedItems"
+      (assignedItemsChange)="assignedItemsChangeHandler($event)"
+      (unassignedItemsChange)="unassignedItemsChangeHandler($event)"
     ></app-drag-and-drop>
   </div>
 </div>
