tranfer items between lists

--- a/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
+++ b/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
@@ -3,8 +3,8 @@
   <div>
     <app-drag-and-drop
       [config]="dragAndDropConfig"
-      [unassignedItems]="unassignedItems"
-      [assignedItems]="assignedItems"
+      [unassigned]="unassignedItems"
+      [assigned]="assignedItems"
       (assignedItemsChange)="assignedItemsChangeHandler($event)"
       (unassignedItemsChange)="unassignedItemsChangeHandler($event)"
     ></app-drag-and-drop>
