--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
@@ -5,6 +5,7 @@
       mat-icon-button
       matTooltip="Basic"
       aria-label="Example icon-button with a heart icon"
+      (click)="onMoveToAssigned()"
     >
       <mat-icon>arrow_forward</mat-icon>
     </button>
@@ -13,6 +14,7 @@
       mat-icon-button
       matTooltip="Basic"
       aria-label="Example icon-button with a heart icon"
+      (click)="onMoveToUnassigned()"
     >
       <mat-icon>arrow_back</mat-icon>
     </button>
