--- a/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
+++ b/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
@@ -1,12 +1,16 @@
-<div class="container">
-  <h1 class="text-center">Drag & Drop</h1>
-  <div>
-    <app-drag-and-drop
-      [config]="dragAndDropConfig"
-      [unassigned]="unassignedItems"
-      [assigned]="assignedItems"
-      (assignedItemsChange)="assignedItemsChangeHandler($event)"
-      (unassignedItemsChange)="unassignedItemsChangeHandler($event)"
-    ></app-drag-and-drop>
-  </div>
+<div class="page container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Drag & Drop</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-drag-and-drop
+        [config]="dragAndDropConfig"
+        [unassigned]="unassignedItems"
+        [assigned]="assignedItems"
+        (assignedItemsChange)="assignedItemsChangeHandler($event)"
+        (unassignedItemsChange)="unassignedItemsChangeHandler($event)"
+      ></app-drag-and-drop>
+    </mat-card-content>
+  </mat-card>
 </div>
