--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel-filter/drag-and-drop-panel-filter.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel-filter/drag-and-drop-panel-filter.component.html
@@ -1,1 +1,4 @@
-<p>drag-and-drop-panel-filter works!</p>
+<mat-form-field class="drag-and-drop__panel-filter">
+  <mat-label>Filtrar</mat-label>
+  <input matInput placeholder="Filtrar"  />
+</mat-form-field>
