--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -1,5 +1,8 @@
 <div class="drag-and-drop__panel">
-  <h2>{{ config.title }}</h2>
+  <h3>{{ config.title }}</h3>
+  <app-drag-and-drop-panel-filter
+    *ngIf="config.hasFilter"
+  ></app-drag-and-drop-panel-filter>
   <div
     [id]="'drag-and-drop-panel-' + side"
     class="drag-and-drop__panel-list"
