--- a/src/app/demos/signals/signals-index/signals-index.component.html
+++ b/src/app/demos/signals/signals-index/signals-index.component.html
@@ -1,1 +1,11 @@
-<p>signals-index works!</p>
+<div id="signals-index-page" class="container">
+  <h2>Signals</h2>
+
+  <p>Ejemplos del funcionamiento de <i>&#64;angular/core signals</i>.</p>
+
+  <hr />
+
+  <h3>Fitler component with signals</h3>
+
+  <app-filter-input></app-filter-input>
+</div>
