--- a/src/app/demos/signals/signals-index/signals-index.component.html
+++ b/src/app/demos/signals/signals-index/signals-index.component.html
@@ -7,5 +7,8 @@
 
   <h3>Fitler component with signals</h3>
 
-  <app-filter-input></app-filter-input>
+  <app-filter-input
+    [value]="filterInitialValue"
+    (changer)="filterInputChange($event)"
+  ></app-filter-input>
 </div>
