--- a/src/app/demos/signals/signals-index/signals-index.component.html
+++ b/src/app/demos/signals/signals-index/signals-index.component.html
@@ -1,5 +1,5 @@
 <div id="signals-index-page" class="container">
-  <h2>Signals</h2>
+  <h2>Signals 🧪</h2>
 
   <p>Ejemplos del funcionamiento de <i>&#64;angular/core signals</i>.</p>
 
@@ -7,8 +7,5 @@
 
   <h3>Fitler component with signals</h3>
 
-  <app-filter-input
-    [value]="filterInitialValue"
-    (changer)="filterInputChange($event)"
-  ></app-filter-input>
+  <app-filter-input [value]="filterInitialValue"></app-filter-input>
 </div>
