--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -1,8 +1,10 @@
 <div class="drag-and-drop__panel">
   <h3>{{ config.title }}</h3>
-  <app-drag-and-drop-panel-filter
-    *ngIf="config.hasFilter"
-  ></app-drag-and-drop-panel-filter>
+  <app-filter-input
+    class="drag-and-drop-panel-filter"
+    [debounce]="filterDebounceTime"
+    (change)="filterChange($event)"
+  ></app-filter-input>
   <div
     [id]="'drag-and-drop-panel-' + side"
     class="drag-and-drop__panel-list"
