--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -2,9 +2,10 @@
   <mat-label>{{ label }}</mat-label>
   <input
     matInput
+    class="filter-input"
     autocomplete="off"
-    [value]="filter()"
+    [value]="value"
     (keyup)="changeHandler($event)"
   />
-  <mat-icon matSuffix>star</mat-icon>
+  <mat-icon matSuffix>{{ icon }}</mat-icon>
 </mat-form-field>
