--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -10,6 +10,8 @@ $color: (
 $dark-theme: mat.define-dark-theme(
   (
     color: $color,
+    typography: mat.define-typography-config(),
+    density: 0,
   )
 );
 
@@ -19,12 +21,10 @@ $light-theme: mat.define-light-theme(
   )
 );
 
-.light-theme {
-  @include mat.core-color($light-theme);
-  @include mat.all-component-themes($light-theme);
-}
+@include mat.core-color($dark-theme);
+@include mat.all-component-themes($dark-theme);
 
-.dark-theme {
-  @include mat.core-color($dark-theme);
-  @include mat.all-component-themes($dark-theme);
+@media (prefers-color-scheme: light) {
+  @include mat.core-color($light-theme);
+  @include mat.button-color($light-theme);
 }
