--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,3 @@
-// /* You can add global styles to this file, and also import other style files */
-// /* @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+@import "styles/index";
 
-// html,
-// body {
-//   height: 100%;
-// }
-// body {
-//   margin: 0;
-//   font-family: Roboto, "Helvetica Neue", sans-serif;
-// }
-
-// .container {
-//   margin-right: auto;
-//   margin-left: auto;
-//   max-width: 940px;
-//   width: 100%;
-// }
-
-// .d-flex {
-//   display: flex;
-// }
-
-// .justify-content-center {
-//   justify-content: center;
-// }
-
-// .align-items-center {
-//   align-items: center;
-// }
+@debug "HOLA";
