--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -1,8 +1,7 @@
-<mat-form-field appearance="outline">
+<mat-form-field appearance="outline" class="filter-input">
   <mat-label>{{ label }}</mat-label>
   <input
     matInput
-    class="filter-input"
     autocomplete="off"
     [value]="value"
     (keyup)="changeHandler($event)"
