feedback for no records.

--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-panel/drag-and-drop-panel.component.html
@@ -33,6 +33,6 @@
         <mat-icon>{{ config.actionButtonIcon }}</mat-icon>
       </button>
     </div>
-    }
+    } @empty { <app-feedback [feedback]="emptyFeedback"></app-feedback> }
   </div>
 </div>
