drag and drop core improve

--- a/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
+++ b/src/app/shared/components/drag-and-drop/components/drag-and-drop-actions/drag-and-drop-actions.component.html
@@ -7,7 +7,16 @@
       aria-label="Example icon-button with a heart icon"
       (click)="onMoveToAssigned()"
     >
-      <mat-icon>arrow_forward</mat-icon>
+      <mat-icon>keyboard_double_arrow_right</mat-icon>
+    </button>
+    <button
+      color="primary"
+      mat-icon-button
+      matTooltip="Basic"
+      aria-label="Example icon-button with a heart icon"
+      (click)="onMoveToAssigned()"
+    >
+      <mat-icon>chevron_right</mat-icon>
     </button>
     <button
       color="primary"
@@ -16,7 +25,16 @@
       aria-label="Example icon-button with a heart icon"
       (click)="onMoveToUnassigned()"
     >
-      <mat-icon>arrow_back</mat-icon>
+      <mat-icon>chevron_left</mat-icon>
+    </button>
+    <button
+      color="primary"
+      mat-icon-button
+      matTooltip="Basic"
+      aria-label="Example icon-button with a heart icon"
+      (click)="onMoveToUnassigned()"
+    >
+      <mat-icon>keyboard_double_arrow_left</mat-icon>
     </button>
   </div>
 </div>
