--- a/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -1,4 +1,4 @@
-<div [id]="id" class="drag-and-drop">
+<div [id]="id + '-drag-and-drop'" class="drag-and-drop">
   <div class="drag-and-drop__container" cdkDropListGroup>
     <app-drag-and-drop-panel
       #unassignedPanel
