feed drag and drop unassigned with a service.

--- a/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
+++ b/src/app/demos/drag-and-drop/drag-and-drop-index/drag-and-drop-index.component.html
@@ -5,6 +5,7 @@
     </mat-card-header>
     <mat-card-content>
       <app-drag-and-drop
+        id="movies"
         [config]="dragAndDropConfig"
         [unassigned]="unassignedItems"
         [assigned]="assignedItems"
