--- a/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -5,6 +5,7 @@
       side="left"
       [config]="config.left"
       [items]="unassignedItems"
+      [isLoading]="isUnassignedLoading"
       (update)="onUnassignedPanelDropHandler($event)"
     ></app-drag-and-drop-panel>
 
